# npdb-public-data-kit

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: data-source.md
src/npdb_kit/: __init__.py  cli.py  duckdb_builder.py  loader.py  schema.py  transformer.py  validator.py
src/npdb_kit/schema/: npdb_schema.yaml
src/npdb_kit/schema/code_maps/: licnfeld.yaml  practage.yaml  rectype.yaml  reptype.yaml  workstat.yaml
src/npdb_kit/sql/views/: malpractice_payment_trends.sql  reports_by_record_type.sql  reports_by_state.sql  reports_by_year.sql
tests/: conftest.py  generate_fixture.py  test_cli.py  test_duckdb_builder.py  test_loader.py  test_transformer.py  test_validator.py
tests/fixtures/: sample_npdb.csv
