[project]
name = "npdb-public-data-kit"
version = "0.1.0"
description = "Open-source toolkit for NPDB Public Use Data File ingestion, validation, and aggregate analysis"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1.0",
    "polars>=1.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[project.scripts]
npdb-kit = "npdb_kit.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/npdb_kit"]

[tool.hatch.build.targets.wheel.force-include]
"src/npdb_kit/schema" = "npdb_kit/schema"
"src/npdb_kit/sql" = "npdb_kit/sql"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
